Fixed alignment on flex-aligned items

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,10 @@ h1 {
   align-items: center;
 }
 
+.flex-row span {
+  text-align: center;
+}
+
 input[type='submit'],
 button {
   background-color: var(--brand);
